--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "crypto-js": "^4.1.1",
+    "iron-session": "^6.0.5",
+    "mongodb": "^4.3.1",
     "next": "12.0.9",
+    "next-connect": "^0.11.0",
+    "next-csrf": "^0.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "request-ip": "^2.1.3"
   },
   "devDependencies": {
     "eslint": "8.8.0",
