--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "crypto-js": "^4.1.1",
+    "csrf": "^3.1.0",
     "iron-session": "^6.0.5",
     "mongodb": "^4.3.1",
-    "next": "12.0.9",
+    "next": "^11.0.1",
     "next-connect": "^0.11.0",
-    "next-csrf": "^0.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "request-ip": "^2.1.3"
